Pre - emptive commit

--- a/Lab2/Lab2_Pandas_Matplotlib.ipynb
+++ b/Lab2/Lab2_Pandas_Matplotlib.ipynb
@@ -1713,6 +1713,30 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "h7cvw4BcaFal"
+      },
+      "outputs": [],
+      "source": [
+        "# Load the Titanic dataset\n",
+        "df = sns.load_dataset('titanic')\n",
+        "\n",
+        "# Select only numeric columns\n",
+        "numeric_df = df.select_dtypes(include=['float64', 'int64'])\n",
+        "\n",
+        "# Introducing missing values in the 'pclass' column\n",
+        "np.random.seed(42)\n",
+        "pclass_nan_indices = np.random.choice(numeric_df.index, size=int(0.05 * len(numeric_df)), replace=False)\n",
+        "numeric_df.loc[pclass_nan_indices, 'pclass'] = np.nan\n",
+        "\n",
+        "# Introducing missing values in the 'parch' column\n",
+        "parch_nan_indices = np.random.choice(numeric_df.index, size=int(0.70 * len(numeric_df)), replace=False)\n",
+        "numeric_df.loc[parch_nan_indices, 'parch'] = np.nan"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zaCrKFjVU-hg"
@@ -1741,43 +1765,17 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "h7cvw4BcaFal"
-      },
-      "outputs": [],
-      "source": [
-        "# Load the Titanic dataset\n",
-        "df = sns.load_dataset('titanic')\n",
-        "\n",
-        "# Select only numeric columns\n",
-        "numeric_df = df.select_dtypes(include=['float64', 'int64'])\n",
-        "\n",
-        "# Introducing missing values in the 'pclass' column\n",
-        "np.random.seed(42)\n",
-        "pclass_nan_indices = np.random.choice(numeric_df.index, size=int(0.05 * len(numeric_df)), replace=False)\n",
-        "numeric_df.loc[pclass_nan_indices, 'pclass'] = np.nan\n",
-        "\n",
-        "# Introducing missing values in the 'parch' column\n",
-        "parch_nan_indices = np.random.choice(numeric_df.index, size=int(0.70 * len(numeric_df)), replace=False)\n",
-        "numeric_df.loc[parch_nan_indices, 'parch'] = np.nan"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "YTYbmBjE_2u0"
       },
       "source": [
-        "#5. Pandas: Merging Joining and Concatenation"
+        "# 5. Pandas: Merging Joining and Concatenation"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "wjjDIiKP_-EZ"
-      },
+      "metadata": {},
       "source": [
         "**Q1.** You have two DataFrames `df1` and `df2` where `df1` has a column `student_id` and `df2` has a column `student_id` along with `grade`, how would you merge these DataFrames on `student_id` to keep only the rows present in both DataFrames? Show output of the merge.\n",
         "\n",
@@ -1793,9 +1791,98 @@
         "\n",
         "df1 = pd.DataFrame(data1)\n",
         "df2 = pd.DataFrame(data2)\n",
-        "```\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>student_id</th>\n",
+              "      <th>name</th>\n",
+              "      <th>grade</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Bob</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Charlie</td>\n",
+              "      <td>B</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4</td>\n",
+              "      <td>David</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   student_id     name grade\n",
+              "0           2      Bob     A\n",
+              "1           3  Charlie     B\n",
+              "2           4    David     C"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data1 = {\n",
+        "    'student_id': [1, 2, 3, 4],\n",
+        "    'name': ['Alice', 'Bob', 'Charlie', 'David']\n",
+        "}\n",
+        "data2 = {\n",
+        "    'student_id': [2, 3, 4, 5],\n",
+        "    'grade': ['A', 'B', 'C', 'D']\n",
+        "}\n",
         "\n",
+        "df1 = pd.DataFrame(data1)\n",
+        "df2 = pd.DataFrame(data2)\n",
         "\n",
+        "newDf = pd.merge(df1,df2)\n",
+        "newDf"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wjjDIiKP_-EZ"
+      },
+      "source": [
         "**Q2.** If you are provided with two DataFrames, employees and departments with `employee_id` as the index, how would you join them such that all rows from the employees DataFrame are kept, even if there is no matching department record? (you may assume employees have 2nd column as `employee_name` and departments have 2nd column as `department_name`, and randomly assign its data)\n",
         "\n",
         "```python\n",
@@ -1810,10 +1897,104 @@
         "\n",
         "employees = pd.DataFrame(employees_data)\n",
         "departments = pd.DataFrame(departments_data)\n",
-        "```\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>employee_id</th>\n",
+              "      <th>employee_name</th>\n",
+              "      <th>department_name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Alice</td>\n",
+              "      <td>D</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Bob</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Charlie</td>\n",
+              "      <td>B</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>David</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   employee_id employee_name department_name\n",
+              "0            1         Alice               D\n",
+              "1            2           Bob               A\n",
+              "2            3       Charlie               B\n",
+              "3            4         David               C"
+            ]
+          },
+          "execution_count": 37,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "employees_data = {\n",
+        "    'employee_id': [1, 2, 3, 4],\n",
+        "    'employee_name': ['Alice', 'Bob', 'Charlie', 'David']\n",
+        "}\n",
+        "departments_data = {\n",
+        "    'employee_id': [2, 3, 4, 1],\n",
+        "    'department_name': ['A', 'B', 'C', 'D']\n",
+        "}\n",
         "\n",
+        "employees = pd.DataFrame(employees_data)\n",
+        "departments = pd.DataFrame(departments_data)\n",
         "\n",
-        "\n",
+        "#LEFT JOINING\n",
+        "mergedData = pd.merge(employees, departments, how = \"left\")\n",
+        "mergedData"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "**Q3**. Given two DataFrames `df_a` and `df_b` with the same columns, how would you concatenate them vertically, resetting the index so it starts from zero in the combined DataFrame? (you may assume both dataframes have 2 columns each, and randomly assign its data)\n",
         "\n",
         "```python\n",
@@ -1828,7 +2009,123 @@
         "\n",
         "df_a = pd.DataFrame(df1)\n",
         "df_b = pd.DataFrame(df2)\n",
-        "```\n"
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>student_id</th>\n",
+              "      <th>name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Alice</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Bob</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Charlie</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>David</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Anish</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>6</td>\n",
+              "      <td>Divakar</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>7</td>\n",
+              "      <td>Vaibhav</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>8</td>\n",
+              "      <td>Tanvi</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   student_id     name\n",
+              "0           1    Alice\n",
+              "1           2      Bob\n",
+              "2           3  Charlie\n",
+              "3           4    David\n",
+              "0           5    Anish\n",
+              "1           6  Divakar\n",
+              "2           7  Vaibhav\n",
+              "3           8    Tanvi"
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df1 = {\n",
+        "    'student_id': [1, 2, 3, 4],\n",
+        "    'name': ['Alice', 'Bob', 'Charlie', 'David']\n",
+        "}\n",
+        "df2 = {\n",
+        "    'student_id': [5, 6, 7, 8],\n",
+        "    'name': ['Anish', 'Divakar', 'Vaibhav', 'Tanvi']\n",
+        "}\n",
+        "\n",
+        "df_a = pd.DataFrame(df1)\n",
+        "df_b = pd.DataFrame(df2)\n",
+        "\n",
+        "concatenatedData = pd.concat([df_a,df_b])\n",
+        "concatenatedData"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 6. Pandas: Advanced Operations (Evaluation and Query)"
       ]
     },
     {
@@ -1837,11 +2134,6 @@
         "id": "htAymA94uZGQ"
       },
       "source": [
-        "#6. Pandas: Advanced Operations (Evaluation and Query)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "You are provided with the dataset, `iris`, which contains information about iris flower species and their physical measurements. Your task is to use :\n",
         "\n",
         "\n",
@@ -1881,12 +2173,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 7. Matplotlib: Basic Plotting Questions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "cC0eIiQxT6nI"
       },
       "source": [
-        "#7. Matplotlib: Basic Plotting Questions\n",
-        "\n",
         "**Q1. Line Plot**\n",
         "\n",
         "Plot a sine wave (\\(y = sin(x)\\)) for \\(x in [0, 2π]\\). Customize the plot by:\n",
@@ -1916,12 +2213,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 8a. Bar Plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Xx5PqjMKu5sa"
       },
       "source": [
-        "#8a. Bar Plot\n",
-        "\n",
         "**Q1** You are provided with the `tips` dataset. Your task is to create a **bar plot** using Matplotlib.\n",
         "\n",
         "- Load the `tips` dataset using Seaborn:  \n",
@@ -1946,12 +2248,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 8b. Scatter Plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "VBuqEqDiu9kG"
       },
       "source": [
-        "#8b. Scatter Plot\n",
-        "\n",
         "**Q1.** You are provided with the `tips` dataset. Your task is to create a **scatter plot** using Matplotlib.\n",
         "\n",
         "- Load the `tips` dataset using Seaborn:  \n",
@@ -1964,6 +2271,13 @@
         "- Label the x-axis as Total Bill, the y-axis as Tip, and add a title: \"Relationship between Total Bill and Tip\".\n",
         "\n",
         "- Based on the scatter plot, do you observe any relationship between total_bill and tip?\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 9. Matplotlib: Subplots and Layouts"
       ]
     },
     {
@@ -1981,8 +2295,6 @@
         "id": "GDKH1CtQtq6L"
       },
       "source": [
-        "#9. Matplotlib: Subplots and Layouts\n",
-        "\n",
         "**Q1.** Create a 2x2 grid of subplots with:\n",
         "- Subplot (1,1): Plot y = sin(x).\n",
         "- Subplot (1,2): Plot y = cos(x) .\n",
@@ -2014,7 +2326,7 @@
         "id": "XALRioST1mCM"
       },
       "source": [
-        "#10. Matplotlib: Advanced Customization"
+        "# 10. Matplotlib: Advanced Customization"
       ]
     },
     {
