Added Amartya file and saving actual file before changing

--- a/Lab2/Lab2_Pandas_Matplotlib.ipynb
+++ b/Lab2/Lab2_Pandas_Matplotlib.ipynb
@@ -2966,9 +2966,7 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "htAymA94uZGQ"
-      },
+      "metadata": {},
       "source": [
         "\n",
         "**Q4** **Use `eval` for Calculations**\n",
@@ -2977,15 +2975,484 @@
         "- Display the top 5 flowers with the largest `petal_area`.\n",
         "- Use `query` to filter flowers that meet the following conditions:\n",
         "  - `petal_area` > 10\n",
-        "  - `sepal_length` is in the range 5 to 7.\n",
-        "\n",
-        "\n",
+        "  - `sepal_length` is in the range 5 to 7.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sepal_length</th>\n",
+              "      <th>sepal_width</th>\n",
+              "      <th>petal_length</th>\n",
+              "      <th>petal_width</th>\n",
+              "      <th>species</th>\n",
+              "      <th>petal_area</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>118</th>\n",
+              "      <td>7.7</td>\n",
+              "      <td>2.6</td>\n",
+              "      <td>6.9</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>15.87</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>109</th>\n",
+              "      <td>7.2</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>6.1</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>15.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>3.3</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>15.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>117</th>\n",
+              "      <td>7.7</td>\n",
+              "      <td>3.8</td>\n",
+              "      <td>6.7</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>14.74</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>144</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.3</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>14.25</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     sepal_length  sepal_width  petal_length  petal_width    species  \\\n",
+              "118           7.7          2.6           6.9          2.3  virginica   \n",
+              "109           7.2          3.6           6.1          2.5  virginica   \n",
+              "100           6.3          3.3           6.0          2.5  virginica   \n",
+              "117           7.7          3.8           6.7          2.2  virginica   \n",
+              "144           6.7          3.3           5.7          2.5  virginica   \n",
+              "\n",
+              "     petal_area  \n",
+              "118       15.87  \n",
+              "109       15.25  \n",
+              "100       15.00  \n",
+              "117       14.74  \n",
+              "144       14.25  "
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#creating a column called petal_area = petal_length * petal_width\n",
+        "iris.eval(\"petal_area = petal_length * petal_width\", inplace = True)\n",
+        "# getting the top 5 largest petal area flowers\n",
+        "largestArea = iris.nlargest(5, 'petal_area')\n",
+        "largestArea"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sepal_length</th>\n",
+              "      <th>sepal_width</th>\n",
+              "      <th>petal_length</th>\n",
+              "      <th>petal_width</th>\n",
+              "      <th>species</th>\n",
+              "      <th>petal_area</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>100</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>3.3</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>15.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>103</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>2.9</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>1.8</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>10.08</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>104</th>\n",
+              "      <td>6.5</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.8</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>12.76</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>108</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>5.8</td>\n",
+              "      <td>1.8</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>10.44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>110</th>\n",
+              "      <td>6.5</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>10.20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>111</th>\n",
+              "      <td>6.4</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>5.3</td>\n",
+              "      <td>1.9</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>10.07</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>112</th>\n",
+              "      <td>6.8</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.5</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>11.55</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>114</th>\n",
+              "      <td>5.8</td>\n",
+              "      <td>2.8</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>12.24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>115</th>\n",
+              "      <td>6.4</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>5.3</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>12.19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>120</th>\n",
+              "      <td>6.9</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>13.11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>124</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.3</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>11.97</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>128</th>\n",
+              "      <td>6.4</td>\n",
+              "      <td>2.8</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>11.76</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>132</th>\n",
+              "      <td>6.4</td>\n",
+              "      <td>2.8</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>12.32</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>136</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>13.44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>139</th>\n",
+              "      <td>6.9</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>11.34</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>140</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>13.44</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>141</th>\n",
+              "      <td>6.9</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>11.73</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>143</th>\n",
+              "      <td>6.8</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>5.9</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>13.57</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>144</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.3</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>14.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>145</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>11.96</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>147</th>\n",
+              "      <td>6.5</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>10.40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>148</th>\n",
+              "      <td>6.2</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>virginica</td>\n",
+              "      <td>12.42</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     sepal_length  sepal_width  petal_length  petal_width    species  \\\n",
+              "100           6.3          3.3           6.0          2.5  virginica   \n",
+              "103           6.3          2.9           5.6          1.8  virginica   \n",
+              "104           6.5          3.0           5.8          2.2  virginica   \n",
+              "108           6.7          2.5           5.8          1.8  virginica   \n",
+              "110           6.5          3.2           5.1          2.0  virginica   \n",
+              "111           6.4          2.7           5.3          1.9  virginica   \n",
+              "112           6.8          3.0           5.5          2.1  virginica   \n",
+              "114           5.8          2.8           5.1          2.4  virginica   \n",
+              "115           6.4          3.2           5.3          2.3  virginica   \n",
+              "120           6.9          3.2           5.7          2.3  virginica   \n",
+              "124           6.7          3.3           5.7          2.1  virginica   \n",
+              "128           6.4          2.8           5.6          2.1  virginica   \n",
+              "132           6.4          2.8           5.6          2.2  virginica   \n",
+              "136           6.3          3.4           5.6          2.4  virginica   \n",
+              "139           6.9          3.1           5.4          2.1  virginica   \n",
+              "140           6.7          3.1           5.6          2.4  virginica   \n",
+              "141           6.9          3.1           5.1          2.3  virginica   \n",
+              "143           6.8          3.2           5.9          2.3  virginica   \n",
+              "144           6.7          3.3           5.7          2.5  virginica   \n",
+              "145           6.7          3.0           5.2          2.3  virginica   \n",
+              "147           6.5          3.0           5.2          2.0  virginica   \n",
+              "148           6.2          3.4           5.4          2.3  virginica   \n",
+              "\n",
+              "     petal_area  \n",
+              "100       15.00  \n",
+              "103       10.08  \n",
+              "104       12.76  \n",
+              "108       10.44  \n",
+              "110       10.20  \n",
+              "111       10.07  \n",
+              "112       11.55  \n",
+              "114       12.24  \n",
+              "115       12.19  \n",
+              "120       13.11  \n",
+              "124       11.97  \n",
+              "128       11.76  \n",
+              "132       12.32  \n",
+              "136       13.44  \n",
+              "139       11.34  \n",
+              "140       13.44  \n",
+              "141       11.73  \n",
+              "143       13.57  \n",
+              "144       14.25  \n",
+              "145       11.96  \n",
+              "147       10.40  \n",
+              "148       12.42  "
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# flowers that have petal_area > 10 and 5 < sepal_length < 7\n",
+        "iris.query('petal_area>10 and 5 < sepal_length < 7')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "htAymA94uZGQ"
+      },
+      "source": [
         "\n",
         "**Q5** **Analyze and Visualize**\n",
         "- Perform a group-wise analysis:\n",
         "  1. Calculate the **average petal length** for each species.\n",
         "  2. Find the **count of flowers** for each species.\n",
         "  3. Create a scatter plot of `sepal_length` vs. `petal_length`, colored by species.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "species\n",
+              "setosa        1.462\n",
+              "versicolor    4.260\n",
+              "virginica     5.552\n",
+              "Name: petal_length, dtype: float64"
+            ]
+          },
+          "execution_count": 56,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#grouping by the species of flower\n",
+        "speciesSet = iris.groupby(\"species\")\n",
+        "\n",
+        "# mean of each flower species' petal length\n",
+        "speciesSet['petal_length'].mean()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "species\n",
+              "setosa        50\n",
+              "versicolor    50\n",
+              "virginica     50\n",
+              "Name: species, dtype: int64"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# finding the count of each species of flower\n",
+        "speciesSet['species'].count()"
       ]
     },
     {
